--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-    "name": "my-plugin",
-    "version": "0.0.1",
-    "description": "Description of your plugin",
-    "main": "dist/index.js",
-    "scripts": {
-        "dev": "webpack --watch",
-        "build": "webpack",
-        "prebuild": "rimraf dist",
-        "format:write": "prettier --write \"**/*.{js,ts}\""
-    },
-    "author": "Amplication Contributor",
-    "license": "Apache-2.0",
-    "devDependencies": {
-        "@amplication/code-gen-types": "^1.3.2",
-        "@babel/parser": "^7.20.7",
-        "@babel/types": "^7.20.7",
-        "@typescript-eslint/eslint-plugin": "^5.33.0",
-        "@typescript-eslint/parser": "^5.33.0",
-        "copy-webpack-plugin": "^11.0.0",
-        "eslint": "^8.21.0",
-        "jest-mock-extended": "^3.0.1",
-        "lodash": "^4.17.21",
-        "prettier": "^2.8.7",
-        "rimraf": "^4.0.7",
-        "ts-loader": "^9.4.2",
-        "typescript": "4.6.2",
-        "webpack": "^5.76.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-node-externals": "^3.0.0"
-
-    }
+  "name": "my-plugin",
+  "version": "0.0.1",
+  "description": "Description of your plugin",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "webpack --watch",
+    "build": "webpack",
+    "prebuild": "rimraf dist",
+    "format:write": "prettier --write \"**/*.{js,ts}\"",
+    "lint": "eslint . --ext .js,.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "author": "Amplication Contributor",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@amplication/code-gen-types": "^1.3.2",
+    "@babel/parser": "^7.20.7",
+    "@babel/types": "^7.20.7",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.21.0",
+    "jest": "^27.0.6",
+    "jest-mock-extended": "^3.0.1",
+    "lodash": "^4.17.21",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.0.7",
+    "ts-loader": "^9.4.2",
+    "typescript": "4.6.2",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
